--- a/AddRecipe.html
+++ b/AddRecipe.html
@@ -6,6 +6,9 @@
   <title>Document</title>
 <head>
 <body>
+  <div>
   <button>Add Recipe</button>
+  <a href="addrecipepage.html">link to add a recipe page</a>
+  </div>
 </body>
 </head>
