Create form for adding new recipes
Added a form for recipe input with fields for name, cook time, allergens, ingredients, and instructions.

--- a/AddRecipe.html
+++ b/AddRecipe.html
@@ -6,9 +6,36 @@
   <title>Document</title>
 <head>
 <body>
-  <div>
-  <button>Add Recipe</button>
-  <a href="addrecipepage.html">link to add a recipe page</a>
-  </div>
+
+  <form action="HandleInput.java" method="GET">
+
+    <label for="RecipeName">Recipe Name</label>
+    <input type="text" id="RecipeName" maxlength="50" required>
+
+    <label for="CookTime">Cook Time</label>
+    <input type="text" id="CookTime" maxlength="3" required>
+
+    <label for="Allergens">Allergens</label>
+    <select>
+        <option value="Gluten">Gluten</option>
+        <option value="Lactose">Lactose</option>
+        <option value="Eggs">Eggs</option>
+        <option value="Nuts">Nuts</option>
+        <option value="SeaFood">Sea Food</option>
+        <option value="Sugar">Sugar</option>
+    </select><br>
+
+    <label for="Ingredients">Ingredients</label>
+    <input type="text" id="Ingredients" required>
+
+    <label for="Instructions">Recipe Instructions</label>
+    <input type="text" id="Instructions" required>
+
+    
+
+    <input type="submit">
+
+  </form>
+
 </body>
 </head>
