Add Cook Method selection to recipe form

--- a/AddRecipe.html
+++ b/AddRecipe.html
@@ -10,10 +10,10 @@
   <form action="HandleInput.java" method="GET">
 
     <label for="RecipeName">Recipe Name</label>
-    <input type="text" id="RecipeName" name="RecipeName" maxlength="50" required>
+    <input type="text" id="RecipeName" name="RecipeName" maxlength="50" required><br>
 
     <label for="CookTime">Cook Time</label>
-    <input type="text" id="CookTime" name="CookTime" maxlength="3" required>
+    <input type="text" id="CookTime" name="CookTime" maxlength="3" required><br>
 
     <label for="Allergens">Allergens</label>
     <select id="Allergens" name="Allergens">
@@ -25,13 +25,25 @@
         <option value="Sugar">Sugar</option>
     </select><br>
 
+    <label for="CookMethod">Cook Method</label>
+    <select id="CookMethod" name="CookMethod">
+        <option value="Oven">Oven</option>
+        <option value="AirFryer">Air Fryer</option>
+        <option value="Stove">Stove</option>
+        <option value="Microwave">Microwave</option>
+        <option value="NoCook">No Cook</option>
+        <option value="Fridge">Fridge</option>
+    </select><br>
+
     <label for="Ingredients">Ingredients</label>
-    <input type="text" id="Ingredients" name="Ingredients" required>
+    <input type="text" id="Ingredients" name="Ingredients" required><br>
 
     <label for="Instructions">Recipe Instructions</label>
-    <input type="text" id="Instructions" name="Instructions" required>
+    <input type="text" id="Instructions" name="Instructions" required><br>
 
-    <input type="submit">
+    
+
+    <input type="submit"><br>
 
   </form>
 
