--- a/AddRecipe.html
+++ b/AddRecipe.html
@@ -15,15 +15,13 @@
     <label for="CookTime">Cook Time</label>
     <input type="text" id="CookTime" name="CookTime" maxlength="3" required><br>
 
-    <label for="Allergens">Allergens</label>
-    <select id="Allergens" name="Allergens">
-        <option value="Gluten">Gluten</option>
-        <option value="Lactose">Lactose</option>
-        <option value="Eggs">Eggs</option>
-        <option value="Nuts">Nuts</option>
-        <option value="SeaFood">Sea Food</option>
-        <option value="Sugar">Sugar</option>
-    </select><br>
+    <label for="Allergens">Allergens</label><br>
+    <label><input type="checkbox" name="Allergens" value="Gluten"> Gluten</label><br>
+    <label><input type="checkbox" name="Allergens" value="Lactose"> Lactose</label><br>
+    <label><input type="checkbox" name="Allergens" value="Eggs"> Eggs</label><br>
+    <label><input type="checkbox" name="Allergens" value="Nuts"> Nuts</label><br>
+    <label><input type="checkbox" name="Allergens" value="SeaFood"> Sea Food</label><br>
+    <label><input type="checkbox" name="Allergens" value="Sugar"> Sugar</label><br>
 
     <label for="CookMethod">Cook Method</label>
     <select id="CookMethod" name="CookMethod">
