--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                 </a>
             </li>
             <li class = "navbar_item">
-                <a href=""class="navbar_links">
+                <a href="AddRecipe.html"class="navbar_links">
                 Upload Recipes  
                 </a>
             </li>
             <li class = "navbar_item">
-                <a href=""class="navbar_links">
+                <a href="search.html"class="navbar_links">
                 Search 
                 </a>
             </li>
