--- a/search.html
+++ b/search.html
@@ -1,4 +1,4 @@
-this is my code: <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,7 +18,7 @@ this is my code: <!DOCTYPE html>
             <option value="sugar">Sugar</option>
         </select>
         <br>
-        <label for="">Cook Method:</label>
+        <label for="cookMethod">Cook Method:</label>
         <select id="cookMethod">
             <option value="oven">Oven</option>
             <option value="stove">Stove</option>
