--- a/search.html
+++ b/search.html
@@ -16,6 +16,7 @@
             <option value="nuts">Nuts</option>
             <option value="eggs">Eggs</option>
             <option value="sugar">Sugar</option>
+            <option value="none">None</option>
         </select>
         <br>
         <label for="cookMethod">Cook Method:</label>
@@ -27,6 +28,7 @@
             <option value="nocook">No Cook</option>
             <option value="fridge">Fridge</option>
             <option value="dorm">Dorm</option>
+            <option value="all">All</option>
         </select>
     </form>
 </body>
