--- a/search.html
+++ b/search.html
@@ -8,27 +8,27 @@
 </head>
 <body>
     <form action = "HandleInput.java" method = "post">
-        <label for="allergen">Allergens:</label>
-        <select id="allergen">
-            <option value="gluten">Gluten</option>
-            <option value="dairy">Dairy</option>
-            <option value="gluten">Gluten</option>
-            <option value="nuts">Nuts</option>
-            <option value="eggs">Eggs</option>
-            <option value="sugar">Sugar</option>
-            <option value="none">None</option>
+        <label for="Allergens">Allergens:</label>
+        <select id="Allergens">
+            <option value="Gluten">Gluten</option>
+            <option value="Lactose">Lactose</option>
+            <option value="Gluten">Gluten</option>
+            <option value="Nuts">Nuts</option>
+            <option value="Eggs">Eggs</option>
+            <option value="Sugar">Sugar</option>
+            <option value="None">None</option>
         </select>
         <br>
-        <label for="cookMethod">Cook Method:</label>
-        <select id="cookMethod">
-            <option value="oven">Oven</option>
-            <option value="stove">Stove</option>
-            <option value="airfryer">Air Fryer</option>
-            <option value="microwave">Microwave</option>
-            <option value="nocook">No Cook</option>
-            <option value="fridge">Fridge</option>
-            <option value="dorm">Dorm</option>
-            <option value="all">All</option>
+        <label for="CookMethod">Cook Method:</label>
+        <select id="CookMethod">
+            <option value="Oven">Oven</option>
+            <option value="Stove">Stove</option>
+            <option value="Air Fryer">Air Fryer</option>
+            <option value="Microwave">Microwave</option>
+            <option value="No Cook">No Cook</option>
+            <option value="Fridge">Fridge</option>
+            <option value="Dorm">Dorm</option>
+            <option value="All">All</option>
         </select>
     </form>
 </body>
