Add 'None' option to allergens checkboxes

--- a/AddRecipe.html
+++ b/AddRecipe.html
@@ -30,6 +30,8 @@
     <label><input type="checkbox" name="Allergens" value="Nuts"> Nuts</label><br>
     <label><input type="checkbox" name="Allergens" value="SeaFood"> Sea Food</label><br>
     <label><input type="checkbox" name="Allergens" value="Sugar"> Sugar</label><br>
+    <label><input type="checkbox" name="Allergens" value="None"> None</label><br>
+
 
     <label>Ingredients (comma separated)</label>
     <input type="text" name="Ingredients" required><br>
