--- a/search.html
+++ b/search.html
@@ -30,6 +30,8 @@
             <option value="Dorm">Dorm</option>
             <option value="All">All</option>
         </select>
+        <br>
+        <input type="submit" value="Search">
     </form>
 </body>
 </html>
