--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
             </li>
         </ul>
         </nav>
-    
+        <div class="description">
+            <h1 style="font-family: 'Georgia', serif;">Welcome to Recipe Hub</h1>
+            <h2 style="font-family: 'Courier', monospace;">What is Recipe Hub?</h2>
+            <h3 style="font-family: 'Tahoma', sans-serif;">Recipe Hub is a website that allows you to upload and search through various recipes</h3>
+        </div>
+        <div class="image_container">
+            <img src="https://www.chp.gov.hk/files/jpg/adult_eng.jpg" width = "400px" height = "250px" alt="Delicious Food">
+            <img src="https://cookanyday.com/cdn/shop/articles/Blog_Dorm-Cooking.jpg?v=1659641068" width = "400px" height = "250px" alt="Delicious Food">
+        </div>
     </body>
 </html>
 
