Link stylesheet to AddRecipe.html
Added a link to the stylesheet for the recipe form.

--- a/AddRecipe.html
+++ b/AddRecipe.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Recipe Form</title>
+<link rel="stylesheet" href="styleRecipeForm.css">
 </head>
 <body>
   <form id="recipeForm" method="GET" action="http://localhost:8000/submit">
