update on visuals

--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
         </nav>
         <div class="description">
             <h1 style="font-family: 'Georgia', serif;">Welcome to Recipe Hub</h1>
-            <h2 style="font-family: 'Courier', monospace;">What is Recipe Hub?</h2>
-            <h3 style="font-family: 'Tahoma', sans-serif;">Recipe Hub is a website that allows you to upload and search through various recipes</h3>
+            <h2 style="font-family: 'Baskerville', serif;">What is Recipe Hub?</h2>
+            <p class = "centered" style="font-family: 'Tahoma', sans-serif;">Recipe Hub is a website that allows you to upload and search through various recipes</p>
         </div>
         <div class="image_container">
             <img src="https://www.chp.gov.hk/files/jpg/adult_eng.jpg" width = "400px" height = "250px" alt="Delicious Food">
+            <img src="https://assets.clevelandclinic.org/transform/LargeFeatureImage/98c65686-0976-41a4-9e1a-0600a133815d/food-noise-1253633323" width = "400px" height = "250px" alt="Delicious Food">
             <img src="https://cookanyday.com/cdn/shop/articles/Blog_Dorm-Cooking.jpg?v=1659641068" width = "400px" height = "250px" alt="Delicious Food">
         </div>
     </body>
