Add back button to AddRecipe.html

--- a/AddRecipe.html
+++ b/AddRecipe.html
@@ -40,6 +40,7 @@
     <label>Instructions</label>
     <input type="text" name="Instructions" required><br>
 
+    <button onclick="location.href='index.html'">back</button><br>
     <button type="submit">Submit</button>
   </form>
 </body>
