--- a/search.html
+++ b/search.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="searchstyle.css">
 </head>
 <body>
+    <button onclick ="location.href='index.html'">Home</button>
+    <h1><u>Search for Recipes</u></h1>
     <form action = "HandleInput.java" method = "post">
         <label for="Allergens">Allergens:</label>
         <select id="Allergens">
@@ -18,7 +20,6 @@
             <option value="Sugar">Sugar</option>
             <option value="None">None</option>
         </select>
-        <br>
         <label for="CookMethod">Cook Method:</label>
         <select id="CookMethod">
             <option value="Oven">Oven</option>
