--- a/AddRecipe.html
+++ b/AddRecipe.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="styleRecipeForm.css">
 </head>
 <body>
-  <form id="recipeForm" method="GET" action="https://glorious-garbanzo-pj4jqgqxpvqj27w5q-8000.app.github.dev/">
+  <form id="recipeForm" method="POST" action="/submit">
     <label>Recipe Name</label>
     <input type="text" name="RecipeName" required><br>
 
