--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <button onclick ="location.href='index.html'">Home</button>
-    <!-- <h1><u>Search for Recipes</u></h1>
+    <h1><u>Search for Recipes</u></h1>
     <form action = "HandleInput.java" method = "post">
         <label for="Allergens">Allergens:</label>
         <select id="Allergens">
@@ -32,18 +32,53 @@
             <option value="All">All</option>
         </select>
         <br>
-        <button type="submit">Submit</button>
-    </form> -->
+       <button type="button" onclick="saveAndReload()">Submit</button>
+    </form>
 <div id="status">Loading...</div>
 <div id="recipeDisplay"></div>
 
 <script>
+// Function to save form data to sessionStorage before reloading
+    function saveAndReload() {
+        const inputElements = document.querySelectorAll('input, select, textarea');
+        inputElements.forEach(element => {
+            sessionStorage.setItem(element.id || element.name, element.value);
+        });
+        window.location.reload();
+    }
+
+    // Function to restore form data from sessionStorage on page load
+    window.onload = function() {
+        const inputElements = document.querySelectorAll('input, select, textarea');
+        inputElements.forEach(element => {
+            const storedValue = sessionStorage.getItem(element.id || element.name);
+            if (storedValue !== null) {
+                if (element.type === 'checkbox' || element.type === 'radio') {
+                    element.checked = (storedValue === 'true');
+                } else {
+                    element.value = storedValue;
+                }
+            }
+        });
+        // Optional: Clear storage after restoration if you don't want data to persist across *manual* refreshes
+        // sessionStorage.clear(); 
+    }
+
 const csvUrl = "recipeOut.csv";
 
 fetch(csvUrl)
     .then(response => response.text())
     .then(csvText => {
         document.getElementById("status").textContent = "Recipes Available";
+
+        // Get 
+        const allergenIn = document.getElementById('Allergens');
+        var allergenVal = allergenIn.value;
+        if (allergenVal == "None") {
+            allergenVal = "a";
+        }
+        const cookMethodIn = document.getElementById('CookMethod');
+        const cookMethodVal = cookMethodIn.value;
 
         // Clean CSV text and split into lines
         const lines = csvText.trim().split(/\r?\n/).filter(line => line.trim() !== "");
@@ -54,25 +89,70 @@ fetch(csvUrl)
         // Loop through all lines (all recipes)
         lines.forEach(line => {
             const values = line.split(",");
+            var add = true;
 
             const id = values[0] || "";
             const name = values[1] || "";
-            const ingredient = values[2] || "";
+            var ingredient = values[2] || "";
+            var ingredients = ""
+            while (ingredient.indexOf("_") > 0) {
+                ingredients += ingredient.substring(0, ingredient.indexOf("_")) + ", ";
+                ingredient = ingredient.substring(ingredient.indexOf("_") + 1);
+            }
+            ingredients += ingredient;
+
             const cookingTime = values[3] || "";
             const cookMethod = values[4] || "";
-            const allergens = values[5] || "";
+            var allergen = values[5] || "";
+            var allergens = "";
+            var checkAllergen = "";
+            while (allergen.indexOf("_") > 0) {
+                checkAllergen = allergen.substring(0, allergen.indexOf("_"))
+                allergens += checkAllergen + ", ";
+                if (checkAllergen == allergenVal) {
+                    add = false;
+                }
+                allergen = allergen.substring(allergen.indexOf("_") + 1);
+            }
+            if (allergen.trim() == allergenVal.trim()) {
+                add = false;
+            }
+            allergens += allergen;
+
 
             const instructions = values.slice(6).join(",") || "";
-
-            html += `
+            if (cookMethodVal == "All" && add) {
+                html += `
                 <div class="varBox"><strong>Name:</strong> ${name}</div>
-                <div class="varBox"><strong>Ingredient List:</strong> ${ingredient}</div>
+                <div class="varBox"><strong>Ingredient List:</strong> ${ingredients}</div>
                 <div class="varBox"><strong>Cooking Time:</strong> ${cookingTime}</div>
                 <div class="varBox"><strong>Cooking Method:</strong> ${cookMethod}</div>
                 <div class="varBox"><strong>Allergens:</strong> ${allergens}</div>
                 <div class="varBox"><strong>Instructions:</strong> ${instructions}</div>
                 <hr>
             `;
+            } else if (cookMethodVal == "Dorm" && (cookMethod == "Microwave" || cookMethod == "Fridge" || cookMethod == "No Cook") && add) {
+                html += `
+                <div class="varBox"><strong>Name:</strong> ${name}</div>
+                <div class="varBox"><strong>Ingredient List:</strong> ${ingredients}</div>
+                <div class="varBox"><strong>Cooking Time:</strong> ${cookingTime}</div>
+                <div class="varBox"><strong>Cooking Method:</strong> ${cookMethod}</div>
+                <div class="varBox"><strong>Allergens:</strong> ${allergens}</div>
+                <div class="varBox"><strong>Instructions:</strong> ${instructions}</div>
+                <hr>
+            `;
+            } else if (cookMethod == cookMethodVal && add) {
+                html += `
+                <div class="varBox"><strong>Name:</strong> ${name}</div>
+                <div class="varBox"><strong>Ingredient List:</strong> ${ingredients}</div>
+                <div class="varBox"><strong>Cooking Time:</strong> ${cookingTime}</div>
+                <div class="varBox"><strong>Cooking Method:</strong> ${cookMethod}</div>
+                <div class="varBox"><strong>Allergens:</strong> ${allergens}</div>
+                <div class="varBox"><strong>Instructions:</strong> ${instructions}</div>
+                <hr>
+            `;
+            } 
+
         });
 
         // Insert all recipes into the page
