--- a/AddRecipe.html
+++ b/AddRecipe.html
@@ -32,6 +32,8 @@
     <label><input type="checkbox" name="Allergens" value="SeaFood"> Sea Food</label><br>
     <label><input type="checkbox" name="Allergens" value="Sugar"> Sugar</label><br>
     <label><input type="checkbox" name="Allergens" value="None"> None</label><br>
+    <label><input type="checkbox" name="Allergens" value="Vegetarian"> Vegetarian</label><br>
+    <label><input type="checkbox" name="Allergens" value="Soy"> Soy</label><br>
 
 
     <label>Ingredients (comma separated)</label>
