--- a/search.html
+++ b/search.html
@@ -18,7 +18,10 @@
             <option value="Nuts">Nuts</option>
             <option value="Eggs">Eggs</option>
             <option value="Sugar">Sugar</option>
+            <option value="Sea Food">Sea Food</option>
             <option value="None">None</option>
+            <option value ="Vegetarian">Vegetarian</option>
+            <option value="Soy">Soy</option>
         </select>
         <label for="CookMethod">Cook Method:</label>
         <select id="CookMethod">
