--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar_container">
-            <a href="" id="navbar_logo">Recipe Hub</a>
+            <a href="" id="navbar_logo">₊୨ Recipe Hub ୧₊</a>
             <div class="navbar_toggle" id="website-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -34,9 +34,16 @@
     </nav>
 
     <div class="description">
-        <h1 style="font-family: 'Georgia', serif;">Welcome to Recipe Hub</h1>
+        <h1 style="font-family: 'Georgia', serif;">✩ Welcome to Recipe Hub! ✩</h1>
         <h2 style="font-family: 'Baskerville', serif;">What is Recipe Hub?</h2>
-        <p class="centered" style="font-family: 'Tahoma', sans-serif;">Recipe Hub is a website that allows you to upload and search through various recipes</p>
+        <p class="centered" style="font-family: 'Georgia', serif;">Explore a world of culinary delights by uploading your favorite recipes and searching for dishes by categories. Whether you’re a home cook, a student, or a full-fledged chef! Recipe Hub makes it easy to find inspiration and create meals that everyone will love.
+</p>
+        <ul>
+            <li>Upload Recipes: Share your culinary creations with the community.</li>
+            <li>Search & Discover: Find recipes by ingredients, cuisine, or dietary preference.</li>
+            <li>Save Favorites: Keep all your go-to recipes in one place.</li>
+            <li>Connect & Inspire: Comment, rate, and engage with fellow food lovers.</li>
+        </ul>
     </div>
 
     <div class="image_container">
