--- a/myrecipes.html
+++ b/myrecipes.html
@@ -47,7 +47,7 @@ fetch(csvUrl)
             html += `
             <div id= "recipeDisplay">
                 <div class = "recipe">
-                    <div class="varBox"><strong>Name:</strong> ${name}</div>
+                    <div class="varBox" id="title"><strong>${name}</strong></div>
                     <div class="varBox"><strong>Ingredient List:</strong> ${ingredient}</div>
                     <div class="varBox"><strong>Cooking Time:</strong> ${cookingTime}</div>
                     <div class="varBox"><strong>Cooking Method:</strong> ${cookMethod}</div>
