create recipe styling

--- a/AddRecipe.html
+++ b/AddRecipe.html
@@ -6,6 +6,7 @@
 <title>Recipe Form</title>
 <link rel="stylesheet" href="styleRecipeForm.css">
 </head>
+<h2 style="font-family: 'Baskerville', serif;">Create Recipe</h2>
 <body>
   <form id="recipeForm" method="POST" action="/submit">
     <label>Recipe Name</label>
@@ -42,7 +43,7 @@
     <label>Instructions</label>
     <input type="text" name="Instructions" required><br>
 
-    <button onclick="location.href='index.html'">back</button><br>
+    <button onclick="location.href='index.html'">Back</button><br>
     <button type="submit">Submit</button>
   </form>
 </body>
